# Nibler

./: CMakeCache.txt  CMakeLists.txt  Makefile  _DS_Store  class_user  outerr.txt  outerr.txtreset
CoreSource/: Snake.cpp  Snake.hpp  SnakePosition.cpp  SnakePosition.hpp  _DS_Store  main.cpp
Lib1Source/: Gui.cpp  Gui.hpp  _DS_Store
lib1.so.dSYM/Contents/: Info.plist
nibbler.dSYM/Contents/Resources/DWARF/: nibbler
